Added navbar as a header

--- a/src/main/resources/templates/anime/list.html
+++ b/src/main/resources/templates/anime/list.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+	<div th:replace="fragments/header :: header"></div>
 	<header class="anime-list-header">
 		<div class="anime-list">
 			<a class="btn btn-primary" style="margin-bottom: 1rem" onclick="toggleForm()" role="button">Add</a>
