--- a/src/main/resources/templates/theme/list.html
+++ b/src/main/resources/templates/theme/list.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+	<div th:replace="fragments/header :: header"></div>
 	<header class="theme-list-header">
 		<div class="theme-list">
 			<a style="margin-bottom: 1rem" class="btn btn-primary" onclick="toggleForm()">Add</a>
